# game-engine

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: CI.yml
Engine/: Engine.cpp  Engine.hpp  GameObject.cpp  GameObject.hpp  Renderer.cpp  Renderer.hpp
